chore(ats-2): wip

--- a/2022/ats745/2/beamer/beamer.tex
+++ b/2022/ats745/2/beamer/beamer.tex
@@ -7,11 +7,11 @@
 
 \documentclass[xcolor=dvipsnames]{beamer} %
 \usetheme[progressbar=frametitle,
-    titleformat=smallcaps,
-    sectionpage=none,
-    numbering=fraction,
-    block=fill,
-    background=dark]{metropolis}
+	titleformat=smallcaps,
+	sectionpage=none,
+	numbering=fraction,
+	block=fill,
+	background=dark]{metropolis}
 \usefonttheme{professionalfonts}
 \usefonttheme{serif} % default family is serif
 \usetikzlibrary{arrows,shapes}
@@ -43,31 +43,63 @@
 \everymath{\displaystyle}
 
 \begin{frame}%,[allowframebreaks]
-  \frametitle{Overview}
+	\frametitle{Overview}
 
-  \setbeamertemplate{section in toc}[sections numbered]
-  \tableofcontents[hideallsubsections]
+	\setbeamertemplate{section in toc}[sections numbered]
+	\tableofcontents[hideallsubsections]
 
 \end{frame}
 
-\section{Sec1}
-\subsection{sub1}
+\section{Standard Chemistry}
 
+\begin{frame}{CAM Default Chemistry}
+    A blanket of aerosols if you want to simulate them.
+\end{frame}
+
+\section{Stats and numbers}
+
+\subsection{How high}
 \begin{frame}
-  \frametitle{First frame}
+	\frametitle{First frame}
+\end{frame}
+
+\subsection{When}
+\begin{frame}
+	\frametitle{Second frame}
 \end{frame}
 
 \subsection{sub2}
-
 \begin{frame}
-  \frametitle{Second frame}
+	\frametitle{Second frame}
+\end{frame}
+
+\section{Chemical Reactions}
+
+\subsection{Basic}
+\begin{frame}{Basics}
+	Nothing.
+\end{frame}
+
+\section{Use cases}
+
+\subsection{Aerosol spread}
+\begin{frame}{\ce{SO2} to Aerosols}
+    Here is an animation!
+\end{frame}
+
+\begin{frame}{Final Remarks}
+    Finally.
+\end{frame}
+
+\begin{frame}{Future Projects}
+    List of stuff.
 \end{frame}
 
 \appendix
 % \input{underscript/appendix.tex}
 % \begin{frame}[allowframebreaks]{References}
 
-    % \printbibliography[heading=none]
+% \printbibliography[heading=none]
 
 % \end{frame}
 
