chore: add notes from Gettleman

--- a/2022/ats745/2/beamer/beamer.tex
+++ b/2022/ats745/2/beamer/beamer.tex
@@ -83,7 +83,7 @@
 \section{Use cases}
 
 \subsection{Aerosol spread}
-\begin{frame}{\ce{SO2} to Aerosols}
+\begin{frame}{\texorpdfstring{\ce{SO2}}{SO2} to Aerosols}
     Here is an animation!
 \end{frame}
 
@@ -95,9 +95,15 @@
     List of stuff.
 \end{frame}
 
+\begin{frame}{SSW}
+    Stratospheric Sudden Warmings
+\end{frame}
+
 \appendix
+
+% \section{Appendix}
 % \input{underscript/appendix.tex}
-% \begin{frame}[allowframebreaks]{References}
+% \begin{frame}[allowframebreaks,plain]{References}
 
 % \printbibliography[heading=none]
 
