--- a/2022/ats745/2/beamer/utils/definitions.sty
+++ b/2022/ats745/2/beamer/utils/definitions.sty
@@ -38,3 +38,6 @@
 
 \newcommand{\dt}[1][t]{\mathrm{d}#1}
 \newcommand{\gf}[1]{\boldsymbol{#1}}
+% Suppress warning: Package hyperref Warning: Token not allowed in a PDF string (Unicode): removing `\translate '
+% https://tex.stackexchange.com/questions/192686/hyperref-warning-caused-by-beamer-appendix
+\renewcommand\appendixname{Appendix}
