chore: update permalink to newest version

--- a/2022/ats745/2/beamer/beamer.tex
+++ b/2022/ats745/2/beamer/beamer.tex
@@ -18,9 +18,9 @@
 % \setbeameroption{show notes on second screen=right} % Both
 % \setbeamercolor{note page}{fg=yellow!10}
 % \setbeamertemplate{note page}{
-% 	\settowidth{\leftmargini}{\usebeamertemplate{itemize item}}
-% 	\addtolength{\leftmargini}{-2\labelsep}
-% 	\pagecolor{black!90}\vfill\insertnote\vfill
+%   \settowidth{\leftmargini}{\usebeamertemplate{itemize item}}
+%   \addtolength{\leftmargini}{-2\labelsep}
+%   \pagecolor{black!90}\vfill\insertnote\vfill
 % }
 
 \usepackage{utils/definitions}
@@ -31,7 +31,7 @@
 \usepackage{utils/colors}
 \setbeamerfont{footnote}{size=\tiny}
 
-\title[Chemistry in CESM2]{Chemistry in CESM2}
+\title[High-top Atmosphere in CESM2]{High-top Atmosphere in CESM2}
 \author{\textsc{Eirik Rolland Enger}}
 \date{\vspace{-3mm}December 7, 2022\hfill\includegraphics[width=4cm]{utils/CSU-Official-wrdmrk-Rev-2.png}}
 \logo{\vspace{-2mm}\includegraphics[width=15mm]{utils/CSU-Official-wrdmrk-Rev-2.png}\hspace{1mm}}
